--- a/view/index.html
+++ b/view/index.html
@@ -13,8 +13,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
-            
-            <div class="container-fluid">
+            <div class="container-fluid px-5">
                 <section class="float-start">
                     <a class="navbar-brand text-white" href="#">Navbar</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,6 +48,46 @@
             </div>
         </nav>    
     </header>
+
+    
+    
+        <section class="container-fluid" id="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="overlay-image" style="background-image: url(../images/Banner/Banner-01.jpg);">
+                            <!--<img src="../images/Banner/Banner-01.jpg" class="d-block w-100" alt="Banner-01">-->
+                        </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>World Cup</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum ipsa perspiciatis debitis aperiam numquam reprehenderit vitae odit, quaerat esse!</p>
+                        </div>
+                        
+                    </div>
+                    <div class="carousel-item">
+                        <div class="overlay-image" style="background-image: url(../images/Banner/Banner-02.jpg);">
+                            <!--<img src="../images/Banner/Banner-01.jpg" class="d-block w-100" alt="Banner-01">-->
+                        </div>
+                        <!--<img src="../images/Banner/Banner-02.jpg" class="d-block w-100" alt="Banner-02">-->
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <section id="background" class="bg-image">
+            <div class="container bg-light">
+                teste
+            </div>
+        </section>
+    </section>
     
     <!-- Scripts -->
     <script src="../js/boostrap.js"></script>
