--- a/css/style.css
+++ b/css/style.css
@@ -22,37 +22,22 @@
 .dropdown-item:hover{
     background-color: #191919;
 }
-#background{
+body{
     background-image: linear-gradient(#14213d, #000000);
     height: 100vh;
 }
 
-/* Slider */
-#container{
-    padding: 0;
-}
-#carouselExampleControls .carousel-inner, #carouselExampleControls .carousel-item{
-    height: 55vh;
-}
-#carouselExampleControls .carousel-caption{
-    top: 70%;
-}
-#carouselExampleControls .carousel-caption h2{
-    font-size: 50px;
-    margin-bottom: 30px;
-}
-#carouselExampleControls .carousel-caption p{
-    font-size: 22px;
-    font-weight: 300;
-    margin-bottom: 100px;
+/* Carousel */
+.carousel-item{
+    height: 32rem;
+    background: #777;
     color: #fff;
+    position: relative;
 }
-.overlay-image{
+#container-carousel{
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    top: 0;
-    background-position: center;
-    background-size: cover;
+    padding-bottom: 50px;
 }
