--- a/css/boostrap.css
+++ b/css/boostrap.css
@@ -29,16 +29,20 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
+  /*--bs-primary: #0d6efd;*/
+  --bs-primary: #fca311;
+  /*--bs-secondary: #6c757d;*/
+  --bs-secondary: #294174;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 13, 110, 253;
-  --bs-secondary-rgb: 108, 117, 125;
+  /*--bs-primary-rgb: 13, 110, 253;*/
+  --bs-primary-rgb: 252, 163, 17;
+  /*--bs-secondary-rgb: 108, 117, 125;*/
+  --bs-secondary-rgb: 41, 65, 116;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -60,7 +64,8 @@
   --bs-body-bg: #fff;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  /*--bs-border-color: #dee2e6;*/
+  --bs-border-color: #fca311;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -70,7 +75,7 @@
   --bs-border-radius-pill: 50rem;
   --bs-heading-color: ;
   --bs-link-color: #0d6efd;
-  --bs-link-hover-color: #0a58ca;
+  --bs-link-hover-color: #fca311;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
