--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World Raff Cup</title>
     <!-- Styles -->
     <link rel="stylesheet" href="../css/boostrap.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid px-5">
                 <section class="float-start">
-                    <a class="navbar-brand text-white" href="#">Navbar</a>
+                    <a class="navbar-brand text-white a-hover" href="./index.html">World Raff Cup</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -24,22 +24,21 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Features</a>
+                            <a class="nav-link text-white" href="#">Partidas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Pricing</a>
+                            <a class="nav-link text-white" href="#">Notícias</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
+                                Classificações
                             </a>
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item text-white" href="#">Action</a></li>
-                            <li><a class="dropdown-item text-white" href="#">Another action</a></li>
-                            <li><a class="dropdown-item text-white" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
+                            <li><a class="dropdown-item text-white" href="#">Fase Final</a></li>
                             </ul>
                         </li>
                         </ul>
@@ -78,10 +77,21 @@
                         <a href="#" class="btn btn-lg btn-primary">Lorem, ipsum.</a>
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
             </div>
         </div>
     </section>
 
+    <section class="body">
+        
+    </section>
     
     
     <!-- Scripts -->
