--- a/view/index.html
+++ b/view/index.html
@@ -38,7 +38,7 @@
                             </a>
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
-                            <li><a class="dropdown-item text-white" href="#">Fase Final</a></li>
+                            <li><a class="dropdown-item text-white" href="./fase-final.html">Fase Final</a></li>
                             </ul>
                         </li>
                         </ul>
