--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html{
 .dropdown-item:hover{
     background-color: #fca311;
 }
-.body{
+body{
     background: linear-gradient(#294174, #000000);
     height: 100%;
 	  background-repeat: no-repeat;
