--- a/view/index.html
+++ b/view/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Raff Cup</title>
     <!-- Styles -->
-    <link rel="stylesheet" href="../css/boostrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -32,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">Notícias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="./teste.html">Teste</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Classificações
@@ -48,7 +55,7 @@
         </nav>    
     </header>
 
-    <section>
+    <section class="border-top border-bottom">
         <div id="myCarousel" class="carousel slide" dara-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
@@ -56,27 +63,21 @@
                 <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="container" id="container-carousel">
-                        <h1>Lorem, ipsum dolor.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tempore consequatur unde amet odio pariatur. Est minus blanditiis, neque rem voluptatem excepturi soluta at, sint, ipsum numquam ratione adipisci maxime!</p>
-                        <a href="#" class="btn btn-lg btn-primary">Lorem, ipsum.</a>
+                <a href="">
+                    <div class="carousel-item active">
+                        <img src="../content/images/banners/banner_01.png" alt="" width="100%" height="100%">
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container" id="container-carousel">
-                        <h1>Lorem, ipsum dolor.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tempore consequatur unde amet odio pariatur. Est minus blanditiis, neque rem voluptatem excepturi soluta at, sint, ipsum numquam ratione adipisci maxime!</p>
-                        <a href="#" class="btn btn-lg btn-primary">Lorem, ipsum.</a>
+                </a>
+                <a href="">
+                    <div class="carousel-item">
+                        <img src="../content/images/banners/banner_02.png" alt="" width="100%" height="100%">
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container" id="container-carousel">
-                        <h1>Lorem, ipsum dolor.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tempore consequatur unde amet odio pariatur. Est minus blanditiis, neque rem voluptatem excepturi soluta at, sint, ipsum numquam ratione adipisci maxime!</p>
-                        <a href="#" class="btn btn-lg btn-primary">Lorem, ipsum.</a>
+                </a>
+                <a href="">
+                    <div class="carousel-item">
+                        <img src="../content/images/banners/banner_03.png" alt="" width="100%" height="100%">
                     </div>
-                </div>
+                </a>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -90,11 +91,203 @@
     </section>
 
     <section class="body">
+
+        <!-- Próximos Jogos -->
+        <div class="container">
+            <div class="row">
+              <div class="col-lg-8 col-md-7 mt-2 mb-5"> 
+                <!--Last Match Result Start-->
+                <div class="next-match-box bg-light">
+                  <h4 class="bg-primary px-5 py-2 fs-3 text-light">Proxima Partida</h4>
+                  <div class="nms-box next-match-box">
+                    <div class="row align-items-center next-match-box">
+                      <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div> <strong>Catar</strong> <img src="../content/images/countries/Catar.png" alt=""> </div>
+                      </div>
+                      <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="nms-info my-5"> 
+                          <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
+                              VS
+                          </strong>
+                          <p class="my-1 font-16 text-primary"><strong>Super Euro League</strong></p>
+                          <p class="font-14 m-0">20 July, 2018   |   04:00 PM GMT+</p>
+                          <p class="font-14 text-primary my-2"><span>New Expo Stadium, NYK</span></p>
+                          <a href="#" class="btn btn-primary">Ver Calendario</a> </div>
+                      </div>
+                      <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="team-logo-right"><img src="../content/images/countries/Catar.png" alt=""> <strong>Catar</strong> </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--Last Match Result End--> 
+              </div>
+              <div class="col-lg-4 col-md-5 mt-2 mb-5">
+                  <div class="bg-light">
+                      <div class="row">
+                          <div class="col-md-12 ">
+                              <div class="border">
+                                  <div class="row align-items-center justify-content-center ">
+                                      <div class="col-md-4">
+                                          <div class="row">
+                                              <div class="col-md-12 d-flex justify-content-center">
+                                                  <img src="../content/images/countries/Catar.png" alt="">
+                                              </div>
+                                          </div>
+                                          <div class="row">
+                                              <div class="col-md-12 text-center">
+                                                  <strong>Catar</strong>
+                                              </div>
+                                          </div>
+                                      </div>
+                                      <div class="col-md-4 text-center justify-content-center my-2">
+                                          <p class="mb-0"> 
+                                              <strong class="font-14 text-primary">Super Asia Cup</strong> 
+                                              <p class="font-14 mb-0">
+                                                  20 December, 2018
+                                                  04:00 PM GMT+
+                                              </p> 
+                                          </p>
+                                          <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
+                                              VS
+                                          </strong>
+                                      </div>
+                                      <div class="col-md-4">
+                                          <div class="row">
+                                              <div class="col-md-12 d-flex justify-content-center">
+                                                  <img src="../content/images/countries/Catar.png" alt="">
+                                              </div>
+                                          </div>
+                                          <div class="row">
+                                              <div class="col-md-12 text-center">
+                                                  <strong>Catar</strong>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-12 text-center">
+                                          <div class="border-top bg-secondary bg-opacity-10 py-1">
+                                              <i class="fa-solid fa-location-dot text-primary"></i> New Expo Stadium, NYK
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                      <div class="row">
+                          <div class="col-md-12 ">
+                              <div class="border">
+                                  <div class="row d-flex align-items-center justify-content-center ">
+                                      <div class="col-md-4">
+                                          <div class="row">
+                                              <div class="col-md-12 d-flex justify-content-center">
+                                                  <img src="../content/images/countries/Catar.png" alt="">
+                                              </div>
+                                          </div>
+                                          <div class="row">
+                                              <div class="col-md-12 text-center">
+                                                  <strong>Catar</strong>
+                                              </div>
+                                          </div>
+                                      </div>
+                                      <div class="col-md-4 text-center justify-content-center my-2">
+                                          <p class="mb-0"> 
+                                              <strong class="font-14 text-primary">Super Asia Cup</strong> 
+                                              <p class="font-14 mb-0">
+                                                  20 December, 2018
+                                                  04:00 PM GMT+
+                                              </p> 
+                                          </p>
+                                          <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
+                                              VS
+                                          </strong>
+                                      </div>
+                                      <div class="col-md-4">
+                                          <div class="row">
+                                              <div class="col-md-12 d-flex justify-content-center">
+                                                  <img src="../content/images/countries/Catar.png" alt="">
+                                              </div>
+                                          </div>
+                                          <div class="row">
+                                              <div class="col-md-12 text-center">
+                                                  <strong>Catar</strong>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-12 text-center">
+                                          <div class="border-top bg-secondary bg-opacity-10 py-1">
+                                              <i class="fa-solid fa-location-dot text-primary"></i> New Expo Stadium, NYK
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+        </div>
         
     </section>
-    
-    
+
+    <div class="container-fluid bg-dark">
+        <div class="container text-white">
+            <footer class="pt-5">
+                <div class="row text-primary">
+                <div class="col-md-4 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a></li>
+                    </ul>
+                </div>
+            
+                <div class="col-md-4 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a></li>
+                    </ul>
+                </div>
+            
+                <div class="col-md-4 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a></li>
+                    </ul>
+                </div>
+                </div>
+            
+                <div class="d-flex flex-column flex-sm-row justify-content-between py-4  border-top">
+                <p>© 2022 World Raff Cup, Inc. All rights reserved.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-light text-white" href="https://github.com/NKRaff"><img src="../content/images/icons/Github.svg" alt="Github" height="24px" width="24px"></a></li>
+                    <li class="ms-3"><a class="link-light text-white" href="https://twitter.com/RaffNK"><img src="../content/images/icons/Twitter.svg" alt="Twitter" height="24px" width="24px"></a></li>
+                    <li class="ms-3"><a class="link-light text-white" href="https://www.instagram.com/nk_raff/"><img src="../content/images/icons/Instagram.svg" alt="Instagram" height="24px" width="24px"></a></li>
+                    <li class="ms-3"><a class="link-light text-white" href="https://www.reddit.com/user/Only_Raff"><img src="../content/images/icons/Reddit.svg" alt="Facebook" height="24px" width="24px"></a></li>
+                </ul>
+                </div>
+            </footer>
+        </div>
+    </div>
+
     <!-- Scripts -->
-    <script src="../js/boostrap.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/20102b8b28.js" crossorigin="anonymous"></script>
+    
 </body>
 </html>
